# FxFixParser

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TECHNICAL_DETAILS.md  pack.sh  pyproject.toml  requirements.txt  run_cli.py  run_ui.py  streamlit_app.py
src/fxfixparser/: __init__.py
src/fxfixparser/core/: __init__.py  exceptions.py  field.py  fx_math.py  message.py  parser.py  report_format.py
src/fxfixparser/products/: __init__.py  base.py  forward.py  futures.py  ndf.py  options.py  spot.py  swap.py
src/fxfixparser/spec/: __init__.py  loader.py
src/fxfixparser/tags/: __init__.py  dictionary.py  fix44.py  fx_tags.py  repeating_groups.py
src/fxfixparser/ui/: __init__.py  app.py
src/fxfixparser/venues/: __init__.py  base.py  bloomberg_dor.py  fxgo.py  lseg_fx_matching.py  registry.py  sgx_titan_otc.py  smart_trade.py  three_sixty_t.py  three_sixty_t_ti.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  sample_messages.py
tests/integration/: __init__.py  test_cli.py  test_full_parse.py
tests/unit/: __init__.py  test_bloomberg_dor.py  test_lseg_fx_matching.py  test_message.py  test_parser.py  test_products.py  test_repeating_groups.py  test_report_format.py  test_sgx_titan_otc.py  test_spec_loader.py  test_swap_execution.py  test_tags.py  test_three_sixty_t.py  test_three_sixty_t_ti.py  test_venues.py
