[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fxfixparser"
version = "0.1.0"
description = "A FIX 4.4 protocol parser for FX trading messages"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Chan Chun Yin Johnny" }
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "streamlit>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
fxfixparser = "fxfixparser.ui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fxfixparser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
