[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fxfixparser"
version = "0.1.0"
description = "A FIX 4.4 protocol parser for FX trading messages"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Chan Chun Yin Johnny" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "streamlit==1.30",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4",
    "flake8==6.0",
    "black==23.11",
    "isort==5.9",
    "mypy==1.8",
]

[project.scripts]
fxfixparser = "fxfixparser.ui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
